language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_let_assignment.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let var = #(1, 2)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let var = #(1, 2)
      ↑            
}


----- AFTER ACTION

pub fn main() {
  let var = #(1, 2)
  let #(int, int_2) = var
}
