language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_let_assignment_with_multiple_constructors.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wobble\n  Woo\n}\n\npub fn main() {\n  let var = Woo\n  todo\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wobble
  Woo
}

pub fn main() {
  let var = Woo
      ↑        
  todo
}


----- AFTER ACTION

pub type Wibble {
  Wobble
  Woo
}

pub fn main() {
  let var = Woo
  case var {
    Wobble -> todo
    Woo -> todo
  }
  todo
}
