language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_list_tail.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(a_list: List(a)) {\n  case a_list {\n    [] -> todo\n    [first, ..rest] -> todo\n  }\n}"
---
----- BEFORE ACTION
pub fn main(a_list: List(a)) {
  case a_list {
    [] -> todo
    [first, ..rest] -> todo
              ↑            
  }
}


----- AFTER ACTION
pub fn main(a_list: List(a)) {
  case a_list {
    [] -> todo
    [first, ] -> todo
    [first, first_2, ..rest_2] -> todo
  }
}
