language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_list_tail_used_in_a_branch.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(a_list: List(a)) {\n  case a_list {\n    [] -> todo\n    [first, ..rest] -> rest\n  }\n}"
---
----- BEFORE ACTION
pub fn main(a_list: List(a)) {
  case a_list {
    [] -> todo
    [first, ..rest] -> rest
              ↑            
  }
}


----- AFTER ACTION
pub fn main(a_list: List(a)) {
  case a_list {
    [] -> todo
    [first, ] -> rest
    [first, first_2, ..rest_2] -> rest
  }
}
