language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_list_variable.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(a_list: List(a)) {\n  todo\n}"
---
----- BEFORE ACTION
pub fn main(a_list: List(a)) {
            ↑                 
  todo
}


----- AFTER ACTION
pub fn main(a_list: List(a)) {
  case a_list {
    [] -> todo
    [first, ..rest] -> todo
  }
  todo
}
