language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_use_assignment.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use var <- f\n}\n\nfn f(g) { g(#(1, 2)) }\n"
---
----- BEFORE ACTION

pub fn main() {
  use var <- f
      ↑       
}

fn f(g) { g(#(1, 2)) }


----- AFTER ACTION

pub fn main() {
  use var <- f
  let #(int, int_2) = var
}

fn f(g) { g(#(1, 2)) }
